# xyzpan

./: .clang-format  .gitignore  3-21 PRESET.xml  3-24 PRESET.xml  3-26 PRESET.xml  ARCHITECTURE.md  AUDIO_GAME_ASSESSMENT.md  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-scaffolding/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-binaural-panning-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-depth-and-elevation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-distance-processing/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-creative-tools/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-ui-and-parameter-system/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/06.1-bug-and-dsp-fixes/: 06.1-01-PLAN.md  06.1-01-SUMMARY.md
.planning/phases/07.1-optimization/: 07.1-01-PLAN.md  07.1-01-SUMMARY.md  07.1-02-PLAN.md  07.1-02-SUMMARY.md  07.1-RESEARCH.md  07.1-VALIDATION.md
.planning/phases/07.2-optimization-round-2-dsp-and-ui-cpu-optimization/: 07.2-01-PLAN.md  07.2-01-SUMMARY.md  07.2-02-PLAN.md  07.2-02-SUMMARY.md  07.2-RESEARCH.md  07.2-VALIDATION.md  07.2-VERIFICATION.md
.planning/phases/07.5-vst-ui-design-overhaul/: 07.5-01-PLAN.md  07.5-01-SUMMARY.md  07.5-02-PLAN.md  07.5-02-SUMMARY.md  07.5-03-PLAN.md  07.5-03-SUMMARY.md  07.5-RESEARCH.md  07.5-VALIDATION.md  07.5-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: dsp-pipeline.html  dsp-pipeline.md  dsp-pipeline.mmd
engine/: CMakeLists.txt
engine/include/xyzpan/: BinauralPipeline.h  ChestPipeline.h  Constants.h  Coordinates.h  DSPStateBridge.h  DistancePipeline.h  ERPipeline.h  Engine.h  FloorPipeline.h  Types.h
engine/include/xyzpan/dsp/: BiquadFilter.h  FDNReverb.h  FastMath.h  FeedbackCombFilter.h  FractionalDelayLine.h  LFO.h  OnePoleLP.h  OnePoleSmooth.h  SVFFilter.h  SVFLowPass.h  SincTable.h  SineLUT.h
engine/src/: BinauralPipeline.cpp  ChestPipeline.cpp  Coordinates.cpp  DistancePipeline.cpp  ERPipeline.cpp  Engine.cpp  FDNReverb.cpp  FloorPipeline.cpp  LFO.cpp
installer/: XYZPan.iss  build_installer.bat
plugin/: CMakeLists.txt  ParamIDs.h  ParamLayout.cpp  ParamLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  Presets.h  SessionConfig.cpp  SessionConfig.h  SharedListenerHub.h
presets/factory/: Behind_You.xml  Corkscrew.xml  Default.xml  Diagonal_Orbits.xml  Elevators.xml  Fly_Around.xml  Near_Whisper.xml  Orbit_XY.xml  Overhead.xml  R-L_parabola.xml  Slow_Drift.xml  Spinning_Drive_By.xml  Vertical_Whispers.xml  Verticality_Modulation.xml  XY_Orbit.xml
research/: proposals.md  spatial-cues.md
tests/: CMakeLists.txt
tests/engine/: TestBinauralPanning.cpp  TestCoordinates.cpp  TestCreativeTools.cpp  TestDelayInterpolation.cpp  TestDepthAndElevation.cpp  TestDistanceProcessing.cpp  TestEarlyReflections.cpp  TestGoldenReference.cpp  TestListenerRoll.cpp  TestOrientationMath.cpp  TestPerformance.cpp  TestSampleRateAdaptation.cpp  TestSineLUT.cpp
tests/plugin/: TestMultiInstance.cpp  TestParameterLayout.cpp  TestPositionBridge.cpp  TestPresets.cpp  TestQuatAccumulator.cpp  TestSessionConfig.cpp
tools/: validate.sh
ui/: AlchemyLookAndFeel.cpp  AlchemyLookAndFeel.h  AvatarParams.h  CMakeLists.txt  Camera.cpp  Camera.h  ColorTheme.cpp  ColorTheme.h  DevPanelComponent.cpp  DevPanelComponent.h  LFOShapeSelector.cpp  LFOShapeSelector.h  LFOStrip.cpp  LFOStrip.h  LFOWaveformButton.cpp  LFOWaveformButton.h  LFOWaveformDisplay.cpp  LFOWaveformDisplay.h  ListenerQuatAccumulator.h  Mesh.cpp  Mesh.h  OutputMeter.cpp  OutputMeter.h  PositionBridge.h  QuatMath.h  SceneParams.h  Shaders.h  UserPreferences.cpp  UserPreferences.h  WelcomeOverlay.cpp  WelcomeOverlay.h  XYZPanGLView.cpp  XYZPanGLView.h
